Added MonoGame.Extended and Input module

--- a/Spring.csproj
+++ b/Spring.csproj
@@ -23,6 +23,12 @@
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="MonoGame.Extended">
+      <HintPath>Spring.Shared\MonoGame.Extended.dll</HintPath>
+    </Reference>
+    <Reference Include="MonoGame.Extended.Input">
+      <HintPath>Spring.Shared\MonoGame.Extended.Input.dll</HintPath>
+    </Reference>
     <Reference Include="MonoGame.Framework">
       <HintPath>Spring.Shared\MonoGame.Framework.dll</HintPath>
     </Reference>
